# BayesReconPy

./: .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  paper.md  pyproject.toml  requirements.txt  setup.py
BayesReconPy/: PMF.py  hierarchy.py  reconc_BUIS.py  reconc_MCMC.py  reconc_MixCond.py  reconc_TDcond.py  reconc_gaussian.py  utils.py
bayesreconpy/: PMF.py  __init__.py  base.py  hierarchy.py  reconc_BUIS.py  reconc_MCMC.py  reconc_MixCond.py  reconc_TDcond.py  reconc_buis.py  reconc_gaussian.py  reconc_mcmc.py  reconc_mint.py  reconc_ols.py  reconc_td_cond.py  shrink_cov.py  utils.py  utils_legacy.py
data/: CH_immigration_citizenship_data.csv  M3_example.pkl  M5_CA1_check.py  Probabilistic Reconciliation via Conditioning.py  aus_tourism_ratio_data.csv  carparts_example.pkl  extr_mkt_events.pkl  extr_mkt_events_basefc.pkl  fc.pkl  fc_infantMortality.pkl  infantMortality.pkl  reconciliation_properties_check.py  residuals_infantMortality.pkl  test_autoarima2_30.pkl  test_autoarima_30.pkl  train_data_new.pkl
docs/: .readthedocs.yaml  bayesreconpy.rst  conf.py  examples.rst  functions.rst  index.rst  linear.rst  modules.rst  nonlinear.rst
notebooks/: Nonlinear Probabilistic Reconciliation via projection.ipynb  Nonlinear Reconciliation of Swiss immigration rate via conditioning.ipynb  Probabilistic Reconciliation via Conditioning with bayesRecon.ipynb  Probabilistic Reconciliation via Conditioning with bayesreconpy.ipynb  Properties of the reconciled distribution via conditioning.ipynb  Reconciliation of M5 hierarchy with mixed-type forecasts.ipynb
(+64 files in other folders)
